[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Abstracts/WeaponSystem.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Abstracts/Ship.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Abstracts/Armor.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Abstracts/Engine.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Arts/fire/fire03.png" type="Texture" id=6]
[ext_resource path="res://Assets/Arts/fire/fire16.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sounds/snd_explosion1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Arts/explosion/boom08.png" type="Texture" id=9]
[ext_resource path="res://Assets/Arts/explosion/boom06.png" type="Texture" id=10]
[ext_resource path="res://Assets/Arts/explosion/boom07.png" type="Texture" id=11]
[ext_resource path="res://Assets/Arts/explosion/boom01.png" type="Texture" id=12]
[ext_resource path="res://Assets/Arts/explosion/boom02.png" type="Texture" id=13]
[ext_resource path="res://Assets/Arts/explosion/boom03.png" type="Texture" id=14]
[ext_resource path="res://Assets/Arts/explosion/boom04.png" type="Texture" id=15]
[ext_resource path="res://Assets/Arts/explosion/boom05.png" type="Texture" id=16]
[ext_resource path="res://Assets/Arts/explosion/boom10.png" type="Texture" id=17]
[ext_resource path="res://Assets/Arts/explosion/boom09.png" type="Texture" id=18]
[ext_resource path="res://Assets/Arts/explosion/boom11.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Ship" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
EngineNode = NodePath("Components/Engine")
ArmorNode = NodePath("Components/Armor")
WeaponSystemNode = NodePath("Components/WeaponSystem")
SpriteNode = NodePath("Sprite")
BoosterSpriteNode = NodePath("Sprite/Booster")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Booster" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( -74, 0 )
rotation = -1.5708
frames = SubResource( 1 )
frame = 1
speed_scale = 1.8

[node name="Explosion" type="AnimatedSprite" parent="Sprite"]
visible = false
modulate = Color( 1, 1, 1, 0.894118 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
speed_scale = 2.75

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]

[node name="CamRemote" type="RemoteTransform2D" parent="."]

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 87, 0 )
scale = Vector2( 2, 2 )

[node name="FRONT(DELETE)" type="Sprite" parent="BulletSpawnPoint"]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="Markers" type="Node2D" parent="."]

[node name="SafeZoneMarkerAnchor" type="Position2D" parent="Markers"]

[node name="Marker" type="Sprite" parent="Markers/SafeZoneMarkerAnchor"]
self_modulate = Color( 0.00784314, 1, 0, 1 )
position = Vector2( 150, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="Components" type="Node2D" parent="."]

[node name="Armor" type="Node2D" parent="Components"]
script = ExtResource( 3 )

[node name="Engine" type="Node2D" parent="Components"]
script = ExtResource( 4 )

[node name="WeaponSystem" type="Node2D" parent="Components"]
script = ExtResource( 1 )
primary_weapon_switch_duration = 2.2

[node name="PrimarySwitchTimer" type="Timer" parent="Components/WeaponSystem"]
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
pitch_scale = 0.5
max_distance = 3200.0
attenuation = 0.329877
bus = "ShipDeathSound"

[connection signal="animation_finished" from="Sprite/Explosion" to="." method="_on_Explosion_animation_finished"]
